--- a/Coding.html
+++ b/Coding.html
@@ -21,7 +21,7 @@
         Brad's coding history is currently pretty short. He has not done any projects that have been kept from  highschool HTML class but he did go though and pass that class with a 94%. After that the things he did with coding where mostly just for fun and nothing that he has to show for it. Once he started working with Grand Circus he found a way to share and support his code. With this he started to  use <a href="https://github.com/bchunn39/">Github</a> and this is what he has worked on for this class. This class has really shown what more can be done with code and opend him up to all new experiances. 
     </p>
     <p>
-        If you need to contact Brad you can do so via e-mail at <u>Brad.Chunn39#gmail.com</u> and he will get back to you as soon as he is able. 
+        If you need to contact Brad you can do so via e-mail at <u>Brad.Chunn39@gmail.com</u> and he will get back to you as soon as he is able. 
     </p>
     <footer>
         <p>This was made by Brad Chunn 12/19/22</p>
